# automatic-mailing-service

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: std_run.yml
backend/: pyproject.toml
backend/core/: __init__.py  celery.py  routers.py  settings.py  urls.py
backend/mailing/: models.py  parser.py  serializers.py  tasks.py  views.py
backend/mailing/tests/: test_models.py
