[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Сервис для автоматической смс рассылки"
authors = ["Aleksey <ranangariel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.7"
psycopg2 = "^2.9.9"
djangorestframework = "^3.15.2"
drf-yasg = "^1.21.7"
redis = "^5.0.7"
celery = "^5.4.0"
django-celery-beat = "^2.6.0"
django-celery-results = "^2.5.1"
flower = "^2.0.1"
django-redis = "^5.4.0"


[tool.poetry.group.dev.dependencies]
coverage = "^7.6.0"
pylint = "^3.2.5"


[tool.coverage.run]
omit = [
    "manage.py",
    "core/wsgi.py",
    "core/asgi.py",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
